--- a/EasyImgurPhone/bin/AndroidManifest.xml
+++ b/EasyImgurPhone/bin/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <application
         android:allowBackup="true"
+        android:name="sg.vinova.easy_imgur.application.EasyImgurApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
