#6 add rounded image view library

--- a/RoundedImageView/project.properties
+++ b/RoundedImageView/project.properties
@@ -12,8 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.3=../PullToRefresh
-android.library.reference.4=../SmoothProgressBar
-android.library.reference.1=../actionbarsherlock
-android.library.reference.2=../ImageLoader
-android.library.reference.5=../RoundedImageView
+android.library=true
