--- a/EasyImgurPhone/AndroidManifest.xml
+++ b/EasyImgurPhone/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:name="sg.vinova.easy_imgur.application.EasyImgurApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Example" >
         <activity
             android:name="sg.vinova.easy_imgur.activity.ContentActivity"
             android:hardwareAccelerated="false"
