--- a/EasyImgurPhone/project.properties
+++ b/EasyImgurPhone/project.properties
@@ -12,9 +12,8 @@
 
 # Project target.
 target=android-19
-android.library.reference.3=..\\PullToRefresh
-android.library.reference.4=..\\SmoothProgressBar
-android.library.reference.1=..\\actionbarsherlock
-android.library.reference.2=..\\ImageLoader
-android.library.reference.6=../RoundedImageView
-android.library.reference.5=../ion
+android.library.reference.3=../actionbarsherlock
+android.library.reference.4=../ImageLoader
+android.library.reference.1=../ion
+android.library.reference.2=../RoundedImageView
+android.library.reference.5=../PullToRefresh
