--- a/EasyImgurPhone/project.properties
+++ b/EasyImgurPhone/project.properties
@@ -12,8 +12,9 @@
 
 # Project target.
 target=android-19
-android.library.reference.3=../actionbarsherlock
-android.library.reference.4=../ImageLoader
-android.library.reference.1=../ion
-android.library.reference.2=../RoundedImageView
-android.library.reference.5=../PullToRefresh
+android.library.reference.3=..\\actionbarsherlock
+android.library.reference.4=..\\ImageLoader
+android.library.reference.1=..\\ion
+android.library.reference.2=..\\RoundedImageView
+android.library.reference.5=..\\PullToRefresh
+android.library.reference.6=../../PhotoView-lib
