--- a/PhotoView-lib/project.properties
+++ b/PhotoView-lib/project.properties
@@ -11,10 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.3=../ion
-android.library.reference.4=../PullToRefresh
-android.library.reference.1=../actionbarsherlock
-android.library.reference.2=../ImageLoader
-android.library.reference.5=../RoundedImageView
-android.library.reference.6=../PhotoView-lib
+target=android-17
+android.library=true
